<resources>
    <string name="app_name">gl-crash-course</string>
    <string name="fragment_first_text_transition">Transition counter :</string>

    <!-- textView -->
    <string name="fragment_first_text">First fragment</string>
    <string name="fragment_second_text">Second fragment</string>
    <string name="course_name">Android crash course</string>

    <string name="author">Krzysztof studio</string>

    <string name="activity_first_text">First activity</string>

    <!-- fragments tags -->
    <string name="tag_fragment_first">FirstFragment</string>
    <string name="tag_fragment_second">SecondFragment</string>
    <string name="tag_fragment_settings">SettingsFragment</string>

    <!-- buttons -->
    <string name="btnStartFirstFragment">Back To List</string>
    <string name="btnStartSecondFragment">Start second fragment</string>

    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_city_list">City List</string>
    <string name="navigation_drawer_add_remove_city">Add / Remove City</string>
    <string name="navigation_drawer_settings">Settings</string>

    <!-- internet -->
    <string name="no_network_response_message">has no network</string>
    <string name="no_network_toast_message">no network!!!</string>
    <string name="fetch_toast_message">fetch failure!!!</string>
    <string name="settings_saved_toast_message">saved!!!</string>

    <!-- settings view -->
    <string name="settings_header_interval">Interval time: hours - minutes</string>
    <string name="settings_header_language">Language: </string>
    <string name="button_save_text">Save</string>
    <string name="button_enter_text">Enter</string>

    <!-- list card view -->
    <string name="temp_prefix">Temperature</string>

    <!-- detal view -->
    <string name="city_prefix">City</string>
    <string name="desc_prefix">Description</string>
    <string name="pressure_prefix">Pressure</string>
    <string name="humidity_prefix">Humidity</string>

    <!-- city picker view -->
    <string name="last_search">last results:</string>
    <string name="type_search_city">type city to search:</string>
    <string name="result">result:</string>
    <string name="btn_search_text">Search</string>
    <string name="btn_text_add">Add</string>

    <string-array name="languages">
        <item>English</item>
        <item>Polish</item>
    </string-array>
</resources>
