<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout3">
    <data>
        <variable name="model" type="com.example.gl_crash_course.settings.view.SettingsViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".settings.view.SettingsFragment">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_header_interval"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:id="@+id/tvInterval"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/numberPickerHours" app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="unit: "
                android:textSize="20sp"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/tvUnits"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                app:layout_constraintBottom_toTopOf="@+id/spinnerUnits"
                android:visibility="invisible"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/spinnerLanguage"
                android:textColor="@color/white"
                android:textSize="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguage"
                android:selectedItemPosition="@={model.languageIdItemPosition}"
                android:entries="@array/languages"
                app:layout_constraintBottom_toTopOf="@id/divider2"/>
        <TextView
                android:text="@string/settings_header_language"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:id="@+id/tvLanguage"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/spinnerLanguage"
                app:layout_constraintTop_toBottomOf="@+id/divider"/>
        <NumberPicker android:layout_width="wrap_content" android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      android:id="@+id/numberPickerHours"
                      android:value="@={model.intervalHours}"

                      app:layout_constraintHorizontal_bias="0.5"
                      app:layout_constraintEnd_toStartOf="@+id/numberPickerMinutes"
                      app:layout_constraintTop_toBottomOf="@+id/tvInterval" android:layout_marginTop="10dp"
                      app:layout_constraintBottom_toTopOf="@+id/divider"/>

        <NumberPicker android:layout_width="wrap_content" android:layout_height="wrap_content"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:id="@+id/numberPickerMinutes"
                      android:value="@={model.intervalMinutes}"
                      app:layout_constraintStart_toEndOf="@+id/numberPickerHours"
                      app:layout_constraintHorizontal_bias="0.5"
                      app:layout_constraintTop_toTopOf="@+id/numberPickerHours"
                      app:layout_constraintBottom_toBottomOf="@+id/numberPickerHours"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/button_save_text"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/button_text_size"
                android:id="@+id/btnSave"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
                android:id="@+id/spinnerUnits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/spinnerLanguage"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvUnits"
                app:layout_constraintBottom_toTopOf="@+id/btnSave"
                android:visibility="invisible"/>
        <View
                android:id="@+id/divider"
                android:layout_width="395dp"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/numberPickerHours"
                app:layout_constraintBottom_toTopOf="@+id/tvLanguage"/>
        <View
                android:id="@+id/divider2"
                android:layout_width="395dp"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/spinnerLanguage"
                app:layout_constraintBottom_toTopOf="@+id/tvUnits"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>